Fix Z-index issue for white bg -- Add tab detail basic layout

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -12,6 +12,7 @@
   height: 100vh;
 
   :nth-child(n) {
+    position: relative;
     z-index: 1;
   }
 
