--- a/src/app/pokemon-detail/pokemon-detail.component.scss
+++ b/src/app/pokemon-detail/pokemon-detail.component.scss
@@ -11,6 +11,7 @@
   height: 100vh;
 
   :nth-child(n) {
+    position: relative;
     z-index: 1;
   }
 
@@ -111,6 +112,11 @@
     }
   }
 
+  .pokemon-tabs-detail {
+    color: $clr-black-400;
+    padding: 2rem 1rem;
+  }
+
 }
 
 .bg-white {
@@ -119,7 +125,7 @@
   width: 100%;
   height: 50%;
   background: $clr-white-400;
-  background: linear-gradient(0deg, $clr-white-400 70%, rgba($clr-white-400, 0.2) 100%);
+  background: linear-gradient(0deg, $clr-white-400 70%, rgba($clr-white-400, 0.4) 100%);
   border-radius: 50%;
   scale: 3.5;
 }
